# dmtoolkit

./: .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  example.env  featurelist.md  playground.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: ci.yml  publish.yml  version_bump_pr.yml
cmd/: get_monsters.py
dmtoolkit/: __init__.py  filters.py  util.py
dmtoolkit/api/: classes.py  conditions.py  encounters.py  items.py  models.py  monsters.py  players.py  races.py  routes.py  serialize.py  spells.py
dmtoolkit/api/data/: classes.json  conditions.json  encounters.json  items.json  players.json  races.json  spells.json  srd_items.json
dmtoolkit/cmd/: README.md  _util.py  classes.py  get_monsters.py  items.py  kcg_crafting.py  kcg_gathering.py  main.py  races.py  raw_classes.json  raw_items.json  raw_races.json  raw_spells.json  spells.py  util.py
dmtoolkit/cmd/kibbles/: raw_alchemy_recipes.txt  raw_blacksmithing_recipes.txt  raw_cooking_recipes.txt  raw_enchanting_recipes.txt  raw_leatherworking_recipes.txt  raw_poisoncraft_recipes.txt  raw_runecarving_recipes.txt  raw_scrollscribing_recipes.txt  raw_tinkering_recipes.txt  raw_wand_whittling_recipes.txt  raw_woodcarving_recipes.txt
dmtoolkit/inittracker/: api.py  loot.py  routes.py
dmtoolkit/inittracker/static/: statblock.css  tracker.css  tracker.js
dmtoolkit/inittracker/templates/: add-player.jinja2  add-status.jinja2  condition-statblock.jinja2  item-statblock.jinja2  loot-statblock.jinja2  (+5 more)
dmtoolkit/modules/: README.md  __init__.py  models.py  registering.py
dmtoolkit/players/: forms.py  routes.py
dmtoolkit/settings/: api.py  forms.py  routes.py
dmtoolkit/static/: aux.css  forms.css  phb.css
dmtoolkit/templates/: base.jinja2  modal.jinja2
tests/: constants.py
tests/fixtures/: entries.json
(+80 files in other folders)
