[tool.poetry]
name = "dmtoolkit"
version = "0.1.0"
description = "Web app containing useful tools for the techie DM"
authors = ["Ben Airey <ben.airey@panther.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-wtf = "^1.2.2"
python-dotenv = "^1.0.1"
flask-session = "^0.8.0"
redis = "^5.2.1"
dominate = "^2.9.1"
requests = "^2.32.4"
d20 = "^1.1.2"

[tool.poetry.scripts]
dmk = "dmtoolkit.cmd.main:main"


[tool.poetry.group.dev.dependencies]
gunicorn = "^25.0.3"


[tool.poetry.group.cmd.dependencies]
selenium = "^4.29.0"
dominate = "^2.9.1"

[tool.pytest.ini_options]
log_cli = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
